Disruption Introduced for Task 2
Added disruption toggle to get_entangled_pair(), such that a third qubit is entangled with the ab pair if disrupted=True. comments highlight differences between files.

still need to do the actual key making part!

--- a/Ekert91-Plain.ipynb
+++ b/Ekert91-Plain.ipynb
@@ -10,10 +10,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "77c0196e-4446-4466-951c-13e1b59f9642",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: qiskit==1.2.4 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (1.2.4)\n",
+      "Requirement already satisfied: rustworkx>=0.15.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (0.15.1)\n",
+      "Requirement already satisfied: numpy<3,>=1.17 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.5 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (1.14.1)\n",
+      "Requirement already satisfied: sympy>=1.3 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (1.13.3)\n",
+      "Requirement already satisfied: dill>=0.3 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (0.3.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (2.9.0.post0)\n",
+      "Requirement already satisfied: stevedore>=3.0.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (5.3.0)\n",
+      "Requirement already satisfied: typing-extensions in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (4.12.2)\n",
+      "Requirement already satisfied: symengine<0.14,>=0.11 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit==1.2.4) (0.13.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from python-dateutil>=2.8.0->qiskit==1.2.4) (1.16.0)\n",
+      "Requirement already satisfied: pbr>=2.0.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from stevedore>=3.0.0->qiskit==1.2.4) (6.1.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from sympy>=1.3->qiskit==1.2.4) (1.3.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: qiskit-aer==0.15.1 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (0.15.1)\n",
+      "Requirement already satisfied: qiskit>=1.1.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit-aer==0.15.1) (1.2.4)\n",
+      "Requirement already satisfied: numpy>=1.16.3 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit-aer==0.15.1) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit-aer==0.15.1) (1.14.1)\n",
+      "Requirement already satisfied: psutil>=5 in /opt/conda/lib/python3.11/site-packages (from qiskit-aer==0.15.1) (5.9.8)\n",
+      "Requirement already satisfied: rustworkx>=0.15.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit>=1.1.0->qiskit-aer==0.15.1) (0.15.1)\n",
+      "Requirement already satisfied: sympy>=1.3 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit>=1.1.0->qiskit-aer==0.15.1) (1.13.3)\n",
+      "Requirement already satisfied: dill>=0.3 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit>=1.1.0->qiskit-aer==0.15.1) (0.3.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit>=1.1.0->qiskit-aer==0.15.1) (2.9.0.post0)\n",
+      "Requirement already satisfied: stevedore>=3.0.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit>=1.1.0->qiskit-aer==0.15.1) (5.3.0)\n",
+      "Requirement already satisfied: typing-extensions in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit>=1.1.0->qiskit-aer==0.15.1) (4.12.2)\n",
+      "Requirement already satisfied: symengine<0.14,>=0.11 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from qiskit>=1.1.0->qiskit-aer==0.15.1) (0.13.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from python-dateutil>=2.8.0->qiskit>=1.1.0->qiskit-aer==0.15.1) (1.16.0)\n",
+      "Requirement already satisfied: pbr>=2.0.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from stevedore>=3.0.0->qiskit>=1.1.0->qiskit-aer==0.15.1) (6.1.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (from sympy>=1.3->qiskit>=1.1.0->qiskit-aer==0.15.1) (1.3.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: pylatexenc==2.10 in /home/jovyan/.qbraid/environments/qbraid_sdk_9j9sjy/pyenv/lib/python3.11/site-packages (2.10)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install qiskit==1.2.4\n",
     "%pip install qiskit-aer==0.15.1\n",
@@ -31,7 +79,7 @@
     "import math \n",
     "\n",
     "# The aim of the assignment is to simulate the Ekert91 key distribution protocol.\n",
-    "# This notebook is for a simulation of the protocol without an attacker."
+    "# This notebook is for a simulation of the protocol with an attacker, to demonstrate that the attacker can be detected."
    ]
   },
   {
@@ -45,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "754953e4-4091-43a4-8a20-76a6df7f699e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "65675ae0-34f0-40db-ba96-b2649e826bb7",
    "metadata": {},
    "outputs": [],
@@ -140,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "09310439-1177-475d-a9e1-1e6354505e2c",
    "metadata": {},
    "outputs": [],
@@ -174,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "6ad716ef-6050-499e-a837-9b37f35ff3f9",
    "metadata": {},
    "outputs": [],
@@ -213,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "10367bd7-8b54-48a6-87db-90fcacdd5c70",
    "metadata": {},
    "outputs": [
@@ -221,6 +269,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "add to key!\n",
+      "add to key!\n",
       "add to key!\n",
       "add to key!\n",
       "add to key!\n",
@@ -273,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c27ccf-ed8f-4321-9c68-220b1975a310",
+   "id": "c14873a3-6753-47bf-846f-d2a4c7d72e3b",
    "metadata": {},
    "outputs": [],
    "source": []
