--- a/Ekert91-Attacker.ipynb
+++ b/Ekert91-Attacker.ipynb
@@ -79,54 +79,7 @@
     "import math \n",
     "\n",
     "# The aim of the assignment is to simulate the Ekert91 key distribution protocol.\n",
-    "# This notebook is for a simulation of the protocol without an attacker."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ffbf68a-29b4-44bb-88d1-aec918bda78a",
-   "metadata": {},
-   "source": [
-    "### Random Entry From Array\n",
-    "(when len(arr) = 3, i = 0, T_transform_matrix is of the required state for a 1/3 probability)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "754953e4-4091-43a4-8a20-76a6df7f699e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#returns a random entry of arr\n",
-    "def get_random_entry(arr, i = 0):\n",
-    "\n",
-    "    #get total entries left to consider\n",
-    "    entries = len(arr) - i\n",
-    "\n",
-    "    #handle base cases\n",
-    "    if entries == 0: raise IndexError (\"tried to get entry from empty array\")\n",
-    "    if entries == 1: return arr[i]\n",
-    "\n",
-    "    #get transform matrix to give 1/(remaining entries) probability of selecting next entry\n",
-    "    T_transform_matrix = [[  1/math.sqrt(entries)        ,  math.sqrt((entries-1)/entries)],\n",
-    "                          [  math.sqrt((entries-1)/entries),  - 1/math.sqrt(entries)]]\n",
-    "    \n",
-    "    # get a new circuit of this type\n",
-    "    circuit = QuantumCircuit(1,1)\n",
-    "    circuit.unitary(T_transform_matrix,[0])\n",
-    "    \n",
-    "    #simulate measurement\n",
-    "    circuit.measure([0],[0]) \n",
-    "    backend = BasicSimulator()\n",
-    "    qc_compiled = transpile(circuit, backend)\n",
-    "    result_sim = backend.run(qc_compiled, shots=1).result()\n",
-    "\n",
-    "    #get the result of measurement\n",
-    "    result = int(next(iter(result_sim.get_counts(qc_compiled))))\n",
-    "\n",
-    "    #return current index if selected, else get random index from remaining indexes\n",
-    "    return arr[i] if int(next(iter(result_sim.get_counts(qc_compiled)))) == 0 else get_random_entry(arr, i+1)"
+    "# This notebook is for a simulation of the protocol with an attacker, to demonstrate that the attacker can be detected."
    ]
   },
   {
@@ -134,12 +87,13 @@
    "id": "6359c116-04d8-40bf-8f98-f868e6e63093",
    "metadata": {},
    "source": [
-    "### Circuit Construction"
+    "### Circuit Construction\n",
+    "Constructs the circuits required for each measurement, along with the unitary matrices required for transformations of each kind."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "65675ae0-34f0-40db-ba96-b2649e826bb7",
    "metadata": {},
    "outputs": [],
@@ -171,10 +125,9 @@
     "    q.h(0)\n",
     "    q.cx(0,1)\n",
     "\n",
-    "    #return entanlged pair\n",
+    "    #return entangled pair\n",
     "    return q\n",
     "#---------------------------------------------------------------------------------\n",
-    "\n",
     "def construct_circuit(entangled_pair, operators):\n",
     "    \n",
     "    #construct the appropriate circuit to match the operators\n",
@@ -193,33 +146,73 @@
    "id": "fb74d866-88f2-430e-af5f-14667754b737",
    "metadata": {},
    "source": [
-    "### Circuit Measurement"
+    "### Circuit Measurement\n",
+    "simulates the measurement of a circuit with simulate_measurement(circuit). Parameter options for varying shots, defaulting to one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "09310439-1177-475d-a9e1-1e6354505e2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_measurement(circuit, shots = 1):\n",
+    "    \n",
+    "    #simulate measurements\n",
+    "    backend = BasicSimulator()\n",
+    "    compiled = transpile(circuit, backend)\n",
+    "    job_sim = backend.run(compiled, shots=shots)\n",
+    "    result_sim = job_sim.result()\n",
+    "\n",
+    "    #return the counts of each result\n",
+    "    return result_sim.get_counts(compiled)\n",
+    "\n",
+    "def measure_once(circuit):\n",
+    "\n",
+    "    #return the result of a single simulated measurement as a string\n",
+    "    return next(iter(simulate_measurement(circuit)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ffbf68a-29b4-44bb-88d1-aec918bda78a",
+   "metadata": {},
+   "source": [
+    "### Random Entry From Array\n",
+    "(when len(arr) = 3, i = 0, T_transform_matrix is of the required state for a 1/3 probability)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "09310439-1177-475d-a9e1-1e6354505e2c",
+   "id": "754953e4-4091-43a4-8a20-76a6df7f699e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def average(c,n): \n",
+    "#returns a random entry of arr\n",
+    "def get_random_entry(arr, i = 0):\n",
     "\n",
-    "    #simulate measurements\n",
-    "    backend = BasicSimulator()\n",
-    "    compiled = transpile(c, backend)\n",
-    "    job_sim = backend.run(compiled, shots=n)\n",
-    "    result_sim = job_sim.result() \n",
-    "    counts = result_sim.get_counts(compiled)\n",
+    "    #get total entries left to consider\n",
+    "    entries = len(arr) - i\n",
     "\n",
-    "    #record results\n",
-    "    count00 = counts.get(\"00\",0) \n",
-    "    count01 = counts.get(\"01\",0) \n",
-    "    count10 = counts.get(\"10\",0) \n",
-    "    count11 = counts.get(\"11\",0) \n",
+    "    #handle base cases\n",
+    "    if entries == 0: raise IndexError (\"tried to get entry from empty array\")\n",
+    "    if entries == 1: return arr[i]\n",
     "\n",
-    "    #return average result\n",
-    "    return (count00 - count01 - count10 + count11) / n "
+    "    #get transform matrix to give 1/(remaining entries) probability of selecting next entry\n",
+    "    T_transform_matrix = [[  1/math.sqrt(entries)        ,  math.sqrt((entries-1)/entries)],\n",
+    "                          [  math.sqrt((entries-1)/entries),  - 1/math.sqrt(entries)]]\n",
+    "    \n",
+    "    # get a new circuit of this type\n",
+    "    circuit = QuantumCircuit(1)\n",
+    "    circuit.unitary(T_transform_matrix,[0])\n",
+    "    \n",
+    "    #measure circuit\n",
+    "    circuit.measure_all() \n",
+    "\n",
+    "    #simulate measurement and return current index if selected, else get random index from remaining indexes\n",
+    "    return arr[i] if measure_once(circuit) == \"0\" else get_random_entry(arr, i+1)"
    ]
   },
   {
@@ -227,38 +220,43 @@
    "id": "29896811-8ae6-48ef-8743-eb71eb5195a4",
    "metadata": {},
    "source": [
-    "### Entanglement Testing"
+    "### Entanglement Testing\n",
+    "\n",
+    "Collates each pair of measurements (of the appropriate types) into the average for each pair over all repetitions. Combines and returns true with entanglement_test(S) if value is within a certain allowance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "6ad716ef-6050-499e-a837-9b37f35ff3f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_abs_s(a_op, b_op, circuit, n=100):\n",
+    "measurement_map = {\"00\":1, \"01\": -1, \"10\":-1, \"11\":1}\n",
     "\n",
+    "def average(circuits, bits = 2): \n",
     "\n",
-    "    #produce missing circuits for S\n",
-    "    circuits = [(ax, bx, construct_circuit(get_entangled_pair(), (ax, bx))) \n",
-    "                for ax in ('x', 'z') for bx in ('w', 'v')  if (ax, bx) != (a_op, b_op)]\n",
+    "    #return the average result of simulating each circuit, considering only the first 'bits' bits, \n",
+    "    #and converted to +-1 with measurement_map\n",
+    "    \n",
+    "    return sum([measurement_map.get(measure_once(circuit)[:bits], 0) \n",
+    "                for circuit in circuits]) / len(circuits)\n",
+    "    \n",
+    "def entanglement_test(S, allowance = (2*math.sqrt(2)-2), no_allowance = False):\n",
     "\n",
-    "    #measure both qubits for all circuits\n",
-    "    for _, _, c in circuits: c.measure_all() \n",
+    "    #get the average of each component of S, and inverse the case ('x', 'y')\n",
+    "    averages = [average(circuits) * (-1 if (a, b) == ('x', 'v') else 1) \n",
+    "                for (a, b), circuits in S.items()]\n",
     "\n",
-    "    #get average for each circuit, flip for XV\n",
-    "    circuits.append((a_op, b_op, circuit))\n",
-    "    averages = [average(c, n) * (-1 if (a, b) == ('x', 'v') else 1) \n",
-    "                for a, b, c in circuits]\n",
+    "    #calculate the absolute value of the sum of averages, |S|\n",
+    "    abs_s = abs(sum(averages))\n",
+    "    print(f\"|S|: {abs_s}\")\n",
     "\n",
-    "    #return abs|S|\n",
-    "    return abs(sum(averages))\n",
+    "    #if no error to be raised when result outwith allowance, return early\n",
+    "    if no_allowance: return True\n",
     "\n",
-    "def entangled_test(a_op, b_op, circuit, allowance = 0.5):\n",
-    "\n",
-    "    #|return true if |S| in desired range of sqrt(2)\n",
-    "    return calculate_abs_s(a_op, b_op, circuit) >= (2*math.sqrt(2)) - allowance"
+    "    #assert if |S| in close enough to 2*root2\n",
+    "    assert abs_s >= (2*math.sqrt(2)) - allowance, \"entanglement has been disrupted.\""
    ]
   },
   {
@@ -271,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "10367bd7-8b54-48a6-87db-90fcacdd5c70",
    "metadata": {},
    "outputs": [
@@ -279,75 +277,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "add to key!\n",
-      "entanglement has been disrupted.\n",
-      "add to key!\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "add to key!\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "entanglement has been disrupted.\n",
-      "add to key!\n",
-      "entanglement has been disrupted.\n",
-      "add to key!\n",
-      "add to key!\n",
-      "add to key!\n",
-      "add to key!\n",
-      "add to key!\n",
-      "add to key!\n",
-      "add to key!\n",
-      "entanglement has been disrupted.\n"
+      "|S|: 1.8633603238866396\n",
+      "shared key of length 33: 010111000000111111110011101011110\n",
+      "\n",
+      "|S|: 1.8880434782608695\n",
+      "shared key of length 33: 011100000010010001110001100011001\n",
+      "\n",
+      "|S|: 1.7333333333333332\n",
+      "shared key of length 43: 0111011010110110100100011000111110111001101\n",
+      "\n",
+      "|S|: 0.9391812865497076\n",
+      "shared key of length 27: 011100000111000001000110010\n",
+      "\n",
+      "|S|: 1.4492291334396596\n",
+      "shared key of length 23: 00110010101011100000011\n",
+      "\n",
+      "|S|: 2.0181818181818185\n",
+      "shared key of length 30: 111111101110110011111111111010\n",
+      "\n",
+      "|S|: 1.1744366744366745\n",
+      "shared key of length 26: 10110011011001101110001000\n",
+      "\n",
+      "|S|: 1.8207774337805298\n",
+      "shared key of length 30: 111000101111000010011101111010\n",
+      "\n",
+      "|S|: 2.445652593021014\n",
+      "shared key of length 26: 01101110000000000001101010\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "N = 10\n",
-    "\n",
     "alice_operators = (a1:='x', a2:='w', a3:='z')\n",
     "bob_operators = (b1:='w', b2:='z', b3:='v')\n",
     "\n",
-    "def ekert91_protocol_attacker(key_length):\n",
-    "    repetitions = int (9 * key_length / 2)\n",
+    "def get_alice_bit(circuit):\n",
+    "    \n",
+    "    #simulate circuit\n",
+    "    return int(measure_once(circuit)[0])\n",
     "\n",
-    "    final_key = []\n",
-    "    for repetition in range(repetitions):\n",
+    "def ekert91_protocol(key_length):\n",
+    "\n",
+    "    #for each repetition\n",
+    "    repetition_measurements = []\n",
+    "    for repetition in range(int (9 * key_length / 2)):\n",
     "        \n",
     "        #1\n",
     "#---------------------------------------------------------------------------------\n",
     "        ab_pair = get_entangled_pair(disrupted=True)\n",
     "#---------------------------------------------------------------------------------\n",
-    "\n",
+    "        \n",
     "        #2-3\n",
     "        a_op = get_random_entry(alice_operators)\n",
     "        b_op = get_random_entry(bob_operators)\n",
     "\n",
     "        #4-5\n",
     "        circuit = construct_circuit(ab_pair, (a_op, b_op)) \n",
-    "        circuit.measure_all() \n",
+    "        circuit.measure_all()\n",
     "\n",
-    "        #if bases are the same, use for key\n",
+    "        #save measurement data\n",
+    "        repetition_measurements.append((a_op, b_op, circuit))\n",
+    "\n",
+    "    S = {}\n",
+    "    shared_key = \"\"\n",
+    "    for a_op, b_op, circuit in repetition_measurements:\n",
+    "        \n",
+    "        #if bases are the same, use alice bit for key\n",
     "        if a_op == b_op:\n",
-    "            print(\"add to key!\")\n",
+    "            shared_key += str(get_alice_bit(circuit))\n",
     "\n",
-    "        #else if case forms S, perform entanglement test\n",
-    "        elif (a_op, b_op) in ((a1,b1),(a1,b3),(a3,b1),(a3,b3)): \n",
-    "           if not entangled_test(a_op, b_op, circuit): print(\"entanglement has been disrupted.\")\n",
+    "        #else if case forms S, save for calculation of S\n",
+    "        elif (pair:=(a_op, b_op)) in ((a1,b1),(a1,b3),(a3,b1),(a3,b3)):\n",
+    "            if pair not in S: S[(a_op, b_op)] = []\n",
+    "            S[pair].append(circuit)\n",
     "\n",
-    "ekert91_protocol_attacker(10)"
+    "    entanglement_test(S, no_allowance=True)\n",
+    "    print(f\"shared key of length {len(shared_key)}: {shared_key}\\n\")\n",
+    "    \n",
+    "ekert91_protocol(32) #1\n",
+    "ekert91_protocol(32) #2\n",
+    "ekert91_protocol(32) #3\n",
+    "ekert91_protocol(32) #4\n",
+    "ekert91_protocol(32) #5\n",
+    "ekert91_protocol(32) #6\n",
+    "ekert91_protocol(32) #7\n",
+    "ekert91_protocol(32) #8\n",
+    "ekert91_protocol(32) #9"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f09909-6f91-4111-a710-bd79147e1c91",
+   "id": "9abef473-b8cc-4db6-9d7b-5b9a26fc7381",
    "metadata": {},
    "outputs": [],
    "source": []
